[project]
name = "vigenere"
version = "0.1.0"
description = ""
authors = [
    {name = "r41ngee",email = "r41ngee@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

